--- a/src/app/recipes/recipe-detail/recipe-detail.page.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.page.html
@@ -5,8 +5,8 @@
     </ion-buttons>
     <ion-title>{{ loadedRecipe.title }}</ion-title>
     <ion-buttons slot="end">
-      <ion-button>
-        <ion-icon name="trash" slot="icon-only" (click)="onDeleteRecipe()" ></ion-icon>
+      <ion-button (click)="onDeleteRecipe()">
+        <ion-icon name="trash" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
@@ -21,7 +21,7 @@
     </ion-row>
     <ion-row>
       <ion-col>
-      <h1 text-center>{{ loadedRecipe.title}}</h1>
+      <ion-label text-center>{{ loadedRecipe.title}}</ion-label>
       </ion-col>
     </ion-row>
     <ion-row>
