--- a/src/app/recipes/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-item/recipe-item.component.html
@@ -1,3 +1,6 @@
-<p>
-  recipe-item works!
-</p>
+<ion-item  [routerLink]="['./', recipeItem.id]">
+  <ion-avatar>
+    <ion-img [src]="recipeItem.imageUrl"></ion-img>
+  </ion-avatar>
+  <ion-label>{{recipeItem.title}}</ion-label>
+</ion-item>
